Made it Better 2.0

--- a/app/src/main/res/layout/fragment_javadoc.xml
+++ b/app/src/main/res/layout/fragment_javadoc.xml
@@ -8,7 +8,7 @@
 
     <WebView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="640dp"
         android:id="@+id/webView"
         android:layout_gravity="left|top" />
 </FrameLayout>
