--- a/app/src/main/res/layout/fragment_pad.xml
+++ b/app/src/main/res/layout/fragment_pad.xml
@@ -9,6 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="left"
-        android:hint="@string/edittext_tint" />
+        android:hint="@string/edittext_tint"
+        android:fontFamily="monospace"
+        android:inputType="textMultiLine"/>
 
 </FrameLayout>
