Fixed crashes in new lines, though behaviour is still buggy.

--- a/app/src/main/res/layout/fragment_pad.xml
+++ b/app/src/main/res/layout/fragment_pad.xml
@@ -11,6 +11,6 @@
         android:gravity="left"
         android:hint="@string/edittext_tint"
         android:fontFamily="monospace"
-        android:inputType="textMultiLine"/>
+        android:inputType="textMultiLine|textNoSuggestions" />
 
 </FrameLayout>
