--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,7 +16,7 @@
 
 
         <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
-            <item name="android:windowBackground">@drawable/splash</item>
+            <item name="android:windowBackground">@color/gray</item>
         </style>
 
 
