--- a/app/src/main/res/layout/fragment_pad.xml
+++ b/app/src/main/res/layout/fragment_pad.xml
@@ -27,7 +27,6 @@
 
         <LinearLayout
             android:orientation="horizontal"
-            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
@@ -39,27 +38,32 @@
             <Button
                 android:id="@+id/leftParen"
                 android:text="("
-                android:layout_width="80px"
+                android:layout_width="0dp"
+                android:layout_weight="10"
                 android:layout_height="wrap_content" />
 
             <Button android:id="@+id/rightParen"
                 android:text=")"
-                android:layout_width="80px"
+                android:layout_width="0dp"
+                android:layout_weight="10"
                 android:layout_height="wrap_content" />
 
             <Button android:id="@+id/leftBrace"
                 android:text="{"
-                android:layout_width="80px"
+                android:layout_width="0dp"
+                android:layout_weight="10"
                 android:layout_height="wrap_content" />
 
             <Button android:id="@+id/rightBrace"
                 android:text="}"
-                android:layout_width="80px"
+                android:layout_width="0dp"
+                android:layout_weight="10"
                 android:layout_height="wrap_content" />
 
             <Button android:id="@+id/semicolon"
                 android:text=";"
-                android:layout_width="80px"
+                android:layout_width="0dp"
+                android:layout_weight="10"
                 android:layout_height="wrap_content" />
         </LinearLayout>
     </LinearLayout>
